#11 - Spring Date JPA 속성 설정
* jpa auditing 기능을 쓰기 위해 JpaConfig 파일 생성
* DB 접근 및 개발 편의성을 위한 프로퍼티 적용

*TODO: 패스워드 노출됨. 처리가 필요함.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,13 @@
-# JPA ? ???? ?? ?????? ??
-# yaml? xml?? json ?? ???? ?? ?? ? ???? ??? ???? ?? ?? ??.
-# xml?? json?? ??? ????. ????? ??? yaml? ???? ??.
 
-debug: false # ??? ??? ?? ??? ??? ? ? ? ?? ??? ??? ??. ?? ??? ?? false? ?? ??.
-management.endpoints.web.exposure.include: "*" # actuator? endpoint? ????? ??? ? ? ? ????.(??? ??? ? ???? ??? ? ? ? ??.)
+
+debug: false
+management.endpoints.web.exposure.include: "*"
 
 logging:
   level:
-    com.com.bitstudy.app: debug # ?? ????? ???? ?? ??? debug ??? ???? ?
-    org.springframework.web.servlet: debug # ? ?? debug? ???? ?. ??? false? ?? request, response ??? ?? ?? ???? ?
-    org.hibernate.type.descriptor.sql.BasicBinder: trace # JPA ??? ??? ? ?? ??? ??? ??? ??? ? ??? ?? ?? ???? ?????? ? ???? ???. ?? ? ? ?? ??? ?.(TODO : ?? ?? ??)
+    com.com.bitstudy.app: debug
+    org.springframework.web.servlet: debug
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 spring:
   datasource:
@@ -18,15 +16,13 @@ spring:
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    defer-datasource-initialization: true # test? ??????? ???? ??? ? ?? ??. ??? resources ?? data.sql(??? ??? ??) ?? ???? DB? ?? ???? ?????? ?? ? ??.
-    hibernate.ddl-auto: create # ???? ?? ??? ???? ???? ???? DDL ???? ?????. domain > Article ???? ?? CREATE TABLE ??? ???? ??? ??? ??? ???? Article? ArticleComment ????? ??.(??? ??? ?? ??? ?)
-    show-sql: true # ??? ???? sql ??? ??????
+    defer-datasource-initialization: true
+    hibernate.ddl-auto: create
+    show-sql: true
     properties:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
 
 
-  h2.console.enabled: false # H2 ??? ??? ??? ??? ??
-  sql.init.mode: always # data.sql ? ?? ???? ??? ???? ??
-  # never(?? ????), always(?? ????), embedded(??? ? ?)
-  # (?? ???? ?? ???? ? ?? ??? ? ???? ????? ?????? always? ??)
+  h2.console.enabled: false
+  sql.init.mode: always
