--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,10 +11,15 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/board
-    username: bitstudy
-    password: 1234
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/board
+#    username: bitstudy
+#    password: 1234
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
+    # h2 DB 를 사용 할 때 아래와 같이 설정
+    url: jdbc:h2:mem:testdb
+    username: sa
+    driver-class-name: org.h2.Driver
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
@@ -24,5 +29,6 @@ spring:
       hibernate.default_batch_fetch_size: 100
 
 
-  h2.console.enabled: false
+#  h2.console.enabled: false
+  h2.console.enabled: true # h2 DB를 사용할 때 true
   sql.init.mode: always
