#18 - Thymeleaf 3 decoupled logic 설정

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -44,3 +44,7 @@ spring:
       # ALL - 모든 레포지토리 
       # ANNOTATED - 지정한 것만 노출
       # VISIBILITY - 레포지토리를 public 으로 노출한 것만
+
+  thymeleaf3: # thymeleaf3 이름은  @ConfigurationProperties("spring.thymeleaf3") 에서 가져온 것이다.
+    decoupled-logic: true
+
