--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// spring security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	// thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	//security + thymeleaf
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
 	// JPA, H2, MySQL 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
